# scMomentum

./: README.md  example.py  extra-requirements.txt  pyproject.toml  setup.py  system.txt
notebooks/: .ipynb  Untitled.ipynb  example-sDG20k-1.ipynb  example-sDG20k.ipynb  scm-functions.ipynb  scm-methods.ipynb
scmomentum/: __init__.py  distances.py  landscapes.py  network_inference.py  requirements.txt  setup.py  utilities.py
scmomentum/src/scmomentum/: setup.py
scmomentum/src/scmomentum/notebooks/: scMomentum.ipynb  scm-functions.ipynb  scm-methods.ipynb
scmomentum/src/scmomentum/scmomentum/: distances.py  network_inference.py
